--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -208,58 +208,96 @@
 		height: 100%;
 		background: #fff;
 		box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
-		padding: 20px;
+
 		transition: left 0.3s ease-in-out;
 		z-index: 999;
 		display: flex;
 		flex-direction: column;
-		justify-content: space-between;
+		overflow-y: auto; // дозволяє скролити в меню
+		-webkit-overflow-scrolling: touch; // для плавності на iOS
+		.container{
+			padding: 10px;
+		}
 	}
+
 
 	.mobile-menu.active {
 		left: 0; /* виїжджає */
 	}
 
-	.menu-close {
-		background: none;
-		border: none;
-		font-size: 30px;
+	.btn-close {
+		display: flex;
+		justify-content: center;
+		padding: 0 0;
 		cursor: pointer;
+		background-color: rgba(0, 0, 0, 0) ;
+		width: 26px;
+		height: 27px;
+		border: none;
 	}
 
 	.mobile-menu ul {
 		list-style: none;
-		padding: 0;
-		margin: 40px 0;
+		padding: 0 5px 0 4px;
+		margin: 30px 0;
 	}
 
 	.mobile-menu ul li {
-		margin-bottom: 20px;
+		margin-bottom: 30px;
+	}
+
+	.mobile-menu .li_span{
+		display: flex;
+		justify-content: space-between;
 	}
 
 	.mobile-menu ul li a {
-		font-size: 18px;
-		color: #000;
-		text-decoration: none;
+		color: var(--Black-Primary, #000);
+
+		font-family: 'Poppins', sans-serif;
+		font-size: 14px;
+		font-style: normal;
+		font-weight: 400;
+		line-height: 22px; /* 157.143% */
 	}
 
 	.account {
-		padding: 20px;
+		padding: 30px 0 30px 15px;
 		background: #f7f7f7;
+		width: 100%;
+		height: 84px;
+		flex-shrink: 0;
+		position: absolute;
+		bottom: 0;
+
+		a{
+			display: flex;
+			justify-content:start;
+			gap: 10px;
+			align-items: center;
+
+			color: var(--Black-Primary, #000);
+
+			font-family: 'Poppins', sans-serif;
+			font-size: 14px;
+			font-style: normal;
+			font-weight: 400;
+			line-height: 22px; /* 157.143% */
+		}
 	}
 
 	/* Overlay */
 	.overlay {
 		position: fixed;
 		top: 0;
-		left: 0;
-		width: 100%;
+		width: 20%;
 		height: 100%;
-		background: rgba(0, 0, 0, 0.5);
+		background: rgba(0, 0, 0, 0.3);
 		opacity: 0;
 		visibility: hidden;
-		transition: opacity 0.3s ease-in-out;
+		transition: opacity 0.5s ease-in-out;
 		z-index: 998;
+		right: 0;
 	}
 
 	.overlay.active {
@@ -282,17 +320,6 @@
 		height: 3px;
 		background: #000;
 		transition: all 0.3s ease-in-out;
-	}
-
-	/* Анімація в хрестик */
-	.burger-menu.open #bar1 {
-		transform: rotate(45deg) translate(5px, 5px);
-	}
-	.burger-menu.open #bar2 {
-		opacity: 0;
-	}
-	.burger-menu.open #bar3 {
-		transform: rotate(-45deg) translate(5px, -5px);
 	}
 
 
