--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -213,8 +213,8 @@
 		z-index: 999;
 		display: flex;
 		flex-direction: column;
-		overflow-y: auto; // дозволяє скролити в меню
-		-webkit-overflow-scrolling: touch; // для плавності на iOS
+		overflow-y: auto;
+		-webkit-overflow-scrolling: touch;
 		.container{
 			padding: 10px;
 		}
