catalo_page_filters

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,6 +17,7 @@
 @import "partials/new_collection_2022";
 @import "partials/gift";
 @import "partials/select2";
+@import "partials/catalog_main";
 
 
 
