--- a/src/scss/partials/gift.scss
+++ b/src/scss/partials/gift.scss
@@ -67,6 +67,7 @@
 					font-style: normal;
 					font-weight: 400;
 					line-height: 22px; /* 157.143% */
+					max-width: 593px;
 				}
 
 				.gift_items__button {
@@ -139,7 +140,7 @@
 				.gift_items__description {
 					color: #6E7172;
 
-
+					max-width: 593px;
 					font-family: 'Poppins', sans-serif;
 					font-size: 14px;
 					font-style: normal;
