--- a/src/partials/foot.html
+++ b/src/partials/foot.html
@@ -1,3 +1,4 @@
 <script src="js/libs.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/nouislider@15.7.1/dist/nouislider.min.js"></script>
 <script src="js/script.js" defer></script>
