--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -8,6 +8,17 @@
 	font-weight: 400;
 	line-height: 22px; /* 157.143% */
 	padding: 11px 0 15px 0;
+	position: absolute;
+	width: 100%;
+	top: 0;
+	left: 0;
+	z-index: 10;
+	transition: transform 0.3s ease-in-out;
+
+	&.slide-up {
+		transform: translateY(-48px);
+		pointer-events: none;
+	}
 }
 
 .header {
@@ -48,6 +59,9 @@
 		width: 100%;
 		background: rgba(255, 255, 255, 0.16);
 	}
+
+
+
 
 
 	.header_left {
@@ -394,6 +408,11 @@
 		padding: 8px 0;
 	}
 
+}
+
+.catalog-page .header__bottom::after {
+	opacity: 0.1;
+	background: var(--Black-Primary, #000);
 }
 
 .mobile_nav_link.scrolled svg path,
