--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -146,6 +146,25 @@
 						color: #000000;
 					}
 				}
+
+				.submenu-toggle{
+					cursor: pointer;
+					transition: transform 0.4s ease-in-out;
+					display: inline-block; /* Щоб transform працював чітко на елементі */
+					transform-origin: center center; /* Обертання строго по центру */
+					line-height: 0;
+				}
+				.submenu-toggle.active{
+					transform: rotate(180deg);
+				}
+
+				.submenu-toggle svg path {
+					stroke: white;
+					transition: stroke 0.5s ease-in-out;
+				}
+				.submenu-toggle svg path.active {
+					stroke: black ;
+				}
 			}
 		}
 
@@ -227,6 +246,7 @@
 		z-index: 999;
 		display: flex;
 		flex-direction: column;
+		justify-content: space-between;
 		overflow-y: auto;
 		-webkit-overflow-scrolling: touch;
 		.container{
@@ -253,7 +273,7 @@
 	.mobile-menu ul {
 		list-style: none;
 		padding: 0 5px 0 4px;
-		margin: 30px 0;
+		margin: 15px 0;
 	}
 
 	.mobile-menu ul li {
@@ -281,7 +301,7 @@
 		width: 100%;
 		height: 84px;
 		flex-shrink: 0;
-		position: absolute;
+		position: sticky;
 		bottom: 0;
 
 		a{
@@ -410,6 +430,12 @@
 
 }
 
+.header .header_left .header_nav .nav__list li {
+	display: flex;
+	gap: 8px;
+}
+
+
 .catalog-page .header__bottom::after {
 	opacity: 0.1;
 	background: var(--Black-Primary, #000);
@@ -473,6 +499,53 @@
 		top: 3px;
 		right: -65px;
 	}
+
+	.mobile-submenu__list {
+		max-height: 0;
+		opacity: 0;
+		overflow: hidden;
+		transition: max-height 0.4s ease-in-out, opacity 0.4s ease-in-out;
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		gap: 15px;
+	}
+
+	.mobile-submenu__list.active {
+		opacity: 1;
+	}
+
+	.submenu-toggle {
+		cursor: pointer;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+	}
+
+	.submenu-toggle {
+		transition: transform 0.3s ease;
+	}
+
+	.submenu-toggle.active  {
+		transform: rotate(90deg);
+	}
+
+
+	.mobile-menu_wrapper {
+		display: flex;
+		justify-content: space-between;
+	}
+
+	.header .mobile-menu ul li{
+		margin: 15px 0;
+	}
+
+	.header .mobile-menu ul{
+		padding: 0 4px 0 5px!important;
+	}
+	.header .mobile-menu .container{
+		padding: 10px;
+	}
+
 }
 
 @media (max-width: 575px) {
