--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -242,7 +242,7 @@
 		background: #fff;
 		box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
 
-		transition: left 0.3s ease-in-out;
+		transition: left 0.4s ease-in-out;
 		z-index: 999;
 		display: flex;
 		flex-direction: column;
@@ -323,14 +323,13 @@
 	/* Overlay */
 	.overlay {
 		position: fixed;
-		top: 0;
-		width: 20%;
-		height: 100%;
-		background: rgba(0, 0, 0, 0.3);
+		inset: 0;
+		background: rgba(0,0,0,0.4);
 		opacity: 0;
 		visibility: hidden;
-		transition: opacity 0.5s ease-in-out;
+		transition: 0.3s ease-in-out;
 		z-index: 998;
+		cursor: pointer;
 		right: 0;
 	}
 
