--- a/src/scss/partials/catalog_main.scss
+++ b/src/scss/partials/catalog_main.scss
@@ -2,7 +2,7 @@
 	background: var(--White, #FFF);
 
 	.container {
-		padding: 140px 0 120px 0;
+		padding: 140px 20px 120px 20px;
 		display: flex;
 		justify-content: center;
 		gap: 60px;
@@ -118,78 +118,7 @@
 
 			}
 
-			.material_menu {
-				display: grid;
-				gap: 20px;
-				max-height: 0;
-				overflow: hidden;
-				transition: max-height 0.4s ease-in-out;
-				$checkmark-svg: '%3Csvg%20width%3D%2214%22%20height%3D%2210%22%20viewBox%3D%220%200%2014%2010%22%20fill%3D%22none%22%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%3E%3Cpath%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M13.2803%200.71967C13.5732%201.01256%2013.5732%201.48744%2013.2803%201.78033L5.28033%209.78033C4.98744%2010.0732%204.51256%2010.0732%204.21967%209.78033L0.21967%205.78033C-0.0732233%205.48744%20-0.0732233%205.01256%200.21967%204.71967C0.512563%204.42678%200.987437%204.42678%201.28033%204.71967L4.75%208.18934L12.2197%200.71967C12.5126%200.426777%2012.9874%200.426777%2013.2803%200.71967Z%22%20fill%3D%22black%22/%3E%3C/svg%3E';
 
-
-				&.active {
-					max-height: 500px;
-				}
-
-				.custom-checkbox {
-					display: flex;
-					align-items: center;
-					gap: 11px;
-					cursor: pointer;
-
-					input {
-						display: none;
-
-						&:checked + .checkmark::after {
-							opacity: 1;
-							transform: translate(-50%, -50%) scale(1);
-						}
-					}
-
-					.checkmark {
-						width: 18px;
-						height: 18px;
-						border: 1px solid #D8D8D8;
-						position: relative;
-
-						&::after {
-							content: '';
-							position: absolute;
-							top: 50%;
-							left: 50%;
-							width: 14px;
-							height: 10px;
-							background-image: url("data:image/svg+xml,#{$checkmark-svg}");
-							background-repeat: no-repeat;
-							background-size: contain;
-							opacity: 0;
-							transform: translate(-50%, -50%) scale(0.5);
-							transition: opacity 0.3s ease, transform 0.3s ease;
-							pointer-events: none;
-						}
-					}
-
-					.custom-checkbox_title {
-						color: var(--Black-Primary, #000);
-
-						font-family: 'Poppins', sans-serif;
-						font-size: 14px;
-						font-style: normal;
-						font-weight: 400;
-						line-height: 22px; /* 157.143% */
-					}
-				}
-
-				.material_arrow svg {
-					transition: transform 0.3s ease;
-				}
-
-				.material_menu.active ~ .material_title .material_arrow svg {
-					transform: rotate(180deg);
-				}
-
-
-			}
 
 
 		}
@@ -201,7 +130,7 @@
 			margin: 20px 0;
 		}
 
-		.shop-now__filters {
+		.shop-gift__filters {
 			width: 100%;
 			color: var(--White, #FFF);
 			text-align: center;
@@ -262,4 +191,37 @@
 
 
 	}
+}
+
+
+@media (max-width: 1280px){
+	.catalog_main .items_card{
+		grid-template-columns: repeat(1, 1fr)!important;
+	}
+	.gift .container .gift_items__right .gift_items__info{
+		padding: 115px 80px 114px 80px;
+	}
+	.container.mod .newsletter_catalog__title{
+		font-size: 35px!important;
+	}
+}
+
+
+@media (max-width: 1579px) {
+	.catalog_main .items_card{
+		grid-template-columns: repeat(2, 1fr);
+	}
+	.container.mod .gift_items{
+		display: grid!important;
+	}
+
+	.container.mod .newsletter_catalog__title{
+		font-size: 40px!important;
+	}
+
+	.container.mod{
+		padding: 0 20px 120px 20px!important;
+	}
+
+
 }
