--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -21,6 +21,7 @@
 @import "partials/noUiSlider";
 @import "partials/newsletter_catalog";
 @import "partials/product_page";
+@import "partials/cart";
 
 
 
@@ -144,7 +145,14 @@ a{
 	}
 }
 
+.button_standart.check{
+	width: 100%;
+	margin-bottom: 20px;
+}
 
+.button_standart.fetch{
+	width: 100%;
+}
 
 
 
@@ -267,4 +275,132 @@ a{
 	padding: 2px 10px;
 	z-index: 1;
 	transition: all 0.3s ease;
+}
+
+
+///////quantity//////////
+.quantity {
+	.quantity-control {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		padding: 14px 30px;
+		background-color: inherit;
+		border-radius: 0px;
+		gap: 16px;
+		width: 204px;
+		border: 1px solid #D8D8D8;
+		background: var(--White, #FFF);
+
+
+	}
+
+	.quantity-control.cart{
+		padding: 8px 17px;
+		width: 120px;
+	}
+
+	.qty-btn {
+		background: none;
+		border: none;
+		font-size: 20px;
+		cursor: pointer;
+		color: #000000;
+		padding: 0 4px;
+		display: flex;
+
+		svg path {
+			fill: #000000;
+			transition: fill 0.3s ease-in-out;
+		}
+
+		svg:hover path {
+			fill: #6a6a6a;
+		}
+	}
+
+	.qty-value {
+		color: var(--Light-Colors-Dark-gray---Light, #707070);
+		font-family: 'Poppins', sans-serif;
+		font-size: 16px;
+		font-style: normal;
+		font-weight: 500;
+		line-height: normal;
+	}
+}
+
+
+
+////////////checkbox standart//////////////////////
+.material_menu {
+	display: grid;
+	gap: 20px;
+	max-height: 0;
+	overflow: hidden;
+	transition: max-height 0.4s ease-in-out;
+	$checkmark-svg: '%3Csvg%20width%3D%2214%22%20height%3D%2210%22%20viewBox%3D%220%200%2014%2010%22%20fill%3D%22none%22%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%3E%3Cpath%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M13.2803%200.71967C13.5732%201.01256%2013.5732%201.48744%2013.2803%201.78033L5.28033%209.78033C4.98744%2010.0732%204.51256%2010.0732%204.21967%209.78033L0.21967%205.78033C-0.0732233%205.48744%20-0.0732233%205.01256%200.21967%204.71967C0.512563%204.42678%200.987437%204.42678%201.28033%204.71967L4.75%208.18934L12.2197%200.71967C12.5126%200.426777%2012.9874%200.426777%2013.2803%200.71967Z%22%20fill%3D%22black%22/%3E%3C/svg%3E';
+
+
+	&.active {
+		max-height: 500px;
+	}
+
+	.custom-checkbox {
+		display: flex;
+		align-items: center;
+		gap: 11px;
+		cursor: pointer;
+
+		input {
+			display: none;
+
+			&:checked + .checkmark::after {
+				opacity: 1;
+				transform: translate(-50%, -50%) scale(1);
+			}
+		}
+
+		.checkmark {
+			width: 18px;
+			height: 18px;
+			border: 1px solid #D8D8D8;
+			position: relative;
+
+			&::after {
+				content: '';
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				width: 14px;
+				height: 10px;
+				background-image: url("data:image/svg+xml,#{$checkmark-svg}");
+				background-repeat: no-repeat;
+				background-size: contain;
+				opacity: 0;
+				transform: translate(-50%, -50%) scale(0.5);
+				transition: opacity 0.3s ease, transform 0.3s ease;
+				pointer-events: none;
+			}
+		}
+
+		.custom-checkbox_title {
+			color: var(--Black-Primary, #000);
+
+			font-family: 'Poppins', sans-serif;
+			font-size: 14px;
+			font-style: normal;
+			font-weight: 400;
+			line-height: 22px; /* 157.143% */
+		}
+	}
+
+	.material_arrow svg {
+		transition: transform 0.3s ease;
+	}
+
+	.material_menu.active ~ .material_title .material_arrow svg {
+		transform: rotate(180deg);
+	}
+
+
 }
