--- a/src/scss/partials/gift.scss
+++ b/src/scss/partials/gift.scss
@@ -382,7 +382,7 @@
 	}
 
 	.gift .container .gift_items__right .gift_items__info{
-		padding: 30px 15px;
+		padding: 30px 15px!important;
 		gap: 10px;
 	}
 
