--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -237,7 +237,7 @@
 		position: fixed;
 		top: 0;
 		left: -100%; /* приховане спочатку */
-		width: 80%; /* або 300px */
+		width: 88%;
 		height: 100%;
 		background: #fff;
 		box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
