--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,3 @@
-
-
-
 @import "lib/mixins";
 @import "lib/normalize";
 @import "lib/sprite";
@@ -22,6 +19,7 @@
 @import "partials/newsletter_catalog";
 @import "partials/product_page";
 @import "partials/cart";
+@import "partials/cart_page";
 
 
 
@@ -103,6 +101,7 @@ body.scroll-lock {
 	box-sizing: border-box;
 }
 a{
+	color: black;
 	text-decoration: none;
 	transition: opacity .5s ease-in-out;
 	cursor: pointer;
@@ -303,9 +302,15 @@ a{
 	.qty-btn {
 		background: none;
 		border: none;
-		font-size: 20px;
+
 		cursor: pointer;
-		color: #000000;
+		color: var(--Light-Colors-Dark-gray---Light, #707070);
+		text-align: center;
+		font-family: 'Poppins', sans-serif;
+		font-size: 16px;
+		font-style: normal;
+		font-weight: 400;
+		line-height: 27px; /* 168.75% */
 		padding: 0 4px;
 		display: flex;
 
@@ -408,4 +413,162 @@ a{
 #mainImage {
 	opacity: 1;
 	transition: opacity 0.3s ease;
+}
+
+
+
+////////////cart subtotal////////
+.subtotal {
+	display: flex;
+	justify-content: space-between;
+	font-weight: bold;
+	margin-bottom: 20px;
+
+	.subtotal__title{
+		color: var(--Black-Primary, #000);
+
+		/* H3-Desktop */
+		font-family: 'Poppins', sans-serif;
+		font-size: 24px;
+		font-style: normal;
+		font-weight: 600;
+		line-height: 26px; /* 108.333% */
+		letter-spacing: 0.48px;
+	}
+
+	.subtotal__price{
+		color: var(--Black-Primary, #000);
+		text-align: right;
+
+		/* H3-Desktop */
+		font-family: 'Poppins', sans-serif;
+		font-size: 24px;
+		font-style: normal;
+		font-weight: 600;
+		line-height: 26px; /* 108.333% */
+		letter-spacing: 0.48px;
+	}
+
+}
+
+
+///////cart items //////
+.items_card.cart {
+	display: grid;
+	overflow-x: hidden;
+	padding: 40px;
+	justify-content: start!important;
+
+	.card {
+		display: flex;
+		align-items: flex-start;
+		gap: 20px;
+		margin-bottom: 20px;
+		width: 107%;
+
+		.card_image.cart{
+			width: 250px;
+			height: 199px;
+
+			.product-badge{
+				top: 10px;
+				left: 10px;
+			}
+			.view-more{
+				padding: 10px;
+			}
+
+		}
+
+
+
+
+		.cart-item-info {
+			display: grid;
+			gap: 8px;
+			width: 100%;
+
+
+			.cart-item__title{
+				display: flex;
+				justify-content: space-between;
+				h4 {
+					color: #3A3836;
+					text-align: center;
+
+					font-family: 'Poppins', sans-serif;
+					font-size: 16px;
+					font-style: normal;
+					font-weight: 300;
+					line-height: 24px; /* 150% */
+					letter-spacing: 0.32px;
+				}
+			}
+
+			.price {
+				color: #3A3836;
+
+				font-family: 'Poppins', sans-serif;
+				font-size: 16px;
+				font-style: normal;
+				font-weight: 600;
+				line-height: 24px; /* 150% */
+				letter-spacing: 0.32px;
+			}
+
+			.product_det{
+				display: flex;
+				gap: 5px ;
+				.product__name{
+					color: var(--Dark-Grey-Secondary, #6E7172);
+					text-align: center;
+					font-family: 'Poppins', sans-serif;
+					font-size: 14px;
+					font-style: normal;
+					font-weight: 300;
+					line-height: 22px; /* 157.143% */
+					letter-spacing: 0.28px;
+				}
+				.product__var{
+					color: var(--Black-Primary, #000);
+					font-family: 'Poppins', sans-serif;
+					font-size: 14px;
+					font-style: normal;
+					font-weight: 300;
+					line-height: 22px;
+					letter-spacing: 0.28px;
+				}
+			}
+
+			.qty {
+				display: flex;
+				align-items: center;
+				margin-top: 8px;
+
+				button {
+					width: 24px;
+					height: 24px;
+					border: 1px solid #ccc;
+					background: none;
+					cursor: pointer;
+				}
+				input {
+					width: 30px;
+					text-align: center;
+					border: 1px solid #ccc;
+					margin: 0 5px;
+				}
+			}
+		}
+
+		.remove {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			background: none;
+			border: none;
+			font-size: 20px;
+			cursor: pointer;
+		}
+	}
 }
